--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "semantic": "0.0.1"
   },
   "devDependencies": {},
