--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.14.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
