--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "finlaypianostudioapp",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "app.js",
   "dependencies": {
     "async": "^3.1.0",
