--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "force-ssl-heroku": "^1.0.2",
     "heroku-ssl-redirect": "^0.1.1",
     "locus": "^2.0.1",
     "mailgun-js": "^0.22.0",
